# KleinRay

./: CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Ray.h  Transform.cpp  Transform.h  main.cpp
Source/Core/: Camera.cpp  Camera.h  Hittable.h  Image.cpp  Image.h  Integrator.h  Light.cpp  Light.h  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Ray.h  Renderer.cpp  Renderer.h  Sampling.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
Source/Geometries/: Mesh.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Source/Integrators/: PathIntegrator.cpp  PathIntegrator.h  Whitted.cpp  Whitted.h
Source/Lights/: PointLight.cpp  PointLight.h
